fix( 统计学习方法概论)
增加代码注解

--- a/第01章 统计学习方法概论/1.Introduction_to_statistical_learning_methods.ipynb
+++ b/第01章 统计学习方法概论/1.Introduction_to_statistical_learning_methods.ipynb
@@ -66,12 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#demo\n",
-    "import numpy as np\n",
-    "import scipy as sp\n",
+    "import numpy as np#numpy支持对多维数组和矩阵进行计算\n",
+    "import scipy as sp#scipy用于处理图像，信号处理，优化和统计分析\n",
     "from scipy.optimize import leastsq\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import matplotlib.pyplot as plt#matplotlib提供绘画功能的第三方库\n",
+    "%matplotlib inline#内嵌画图，直接显示图像"
    ]
   },
   {
@@ -89,15 +88,13 @@
    "source": [
     "# 目标函数\n",
     "def real_func(x):\n",
-    "    return np.sin(2*np.pi*x)\n",
+    "    return np.sin(2*np.pi*x)#目标函数sin2πx\n",
     "\n",
     "# 多项式\n",
     "def fit_func(p, x):\n",
-    "    f = np.poly1d(p)\n",
+    "    f = np.poly1d(p)#多项式函数\n",
     "    return f(x)\n",
-    "\n",
-    "# 残差\n",
-    "def residuals_func(p, x, y):\n",
+    "def residuals_func(p, x, y):#残差x, y预测值\n",
     "    ret = fit_func(p, x) - y\n",
     "    return ret"
    ]
@@ -109,28 +106,27 @@
    "outputs": [],
    "source": [
     "# 十个点\n",
-    "x = np.linspace(0, 1, 10)\n",
-    "x_points = np.linspace(0, 1, 1000)\n",
+    "x = np.linspace(0, 1, 10)#10个噪声点\n",
+    "x_points = np.linspace(0, 1, 1000)#1000个真实目标点\n",
     "# 加上正态分布噪音的目标函数的值\n",
     "y_ = real_func(x)\n",
-    "y = [np.random.normal(0, 0.1) + y1 for y1 in y_]\n",
+    "y = [np.random.normal(0, 0.1) + y1 for y1 in y_]#加均值0，方差0.1的正态分布噪音\n",
     "\n",
-    "\n",
-    "def fitting(M=0):\n",
+    "def fitting(M=0):#M多项式次数\n",
     "    \"\"\"\n",
     "    M    为 多项式的次数\n",
     "    \"\"\"\n",
     "    # 随机初始化多项式参数\n",
-    "    p_init = np.random.rand(M + 1)\n",
+    "    p_init = np.random.rand(M + 1)#随机初始化多项式参数，次数为M+1个\n",
     "    # 最小二乘法\n",
-    "    p_lsq = leastsq(residuals_func, p_init, args=(x, y))\n",
+    "    p_lsq = leastsq(residuals_func, p_init, args=(x, y))#三个参数：误差函数、函数参数列表、数据点\n",
     "    print('Fitting Parameters:', p_lsq[0])\n",
     "\n",
     "    # 可视化\n",
-    "    plt.plot(x_points, real_func(x_points), label='real')\n",
-    "    plt.plot(x_points, fit_func(p_lsq[0], x_points), label='fitted curve')\n",
-    "    plt.plot(x, y, 'bo', label='noise')\n",
-    "    plt.legend()\n",
+    "    plt.plot(x_points, real_func(x_points), label='real')#真实曲线\n",
+    "    plt.plot(x_points, fit_func(p_lsq[0], x_points), label='fitted curve')#拟合曲线\n",
+    "    plt.plot(x, y, 'bo', label='noise')#bo蓝，ro红\n",
+    "    plt.legend()#加图例\n",
     "    return p_lsq"
    ]
   },
@@ -314,7 +310,7 @@
     "regularization = 0.0001\n",
     "\n",
     "\n",
-    "def residuals_func_regularization(p, x, y):\n",
+    "def residuals_func_regularization(p, x, y):#采用L2正则化\n",
     "    ret = fit_func(p, x) - y\n",
     "    ret = np.append(ret,\n",
     "                    np.sqrt(0.5 * regularization * np.square(p)))  # L2范数作为正则化项\n",
@@ -328,9 +324,9 @@
    "outputs": [],
    "source": [
     "# 最小二乘法,加正则化项\n",
-    "p_init = np.random.rand(9 + 1)\n",
+    "p_init = np.random.rand(9 + 1)#随机初始化多项式参数，次数为9+1个\n",
     "p_lsq_regularization = leastsq(\n",
-    "    residuals_func_regularization, p_init, args=(x, y))"
+    "    residuals_func_regularization, p_init, args=(x, y))#三个参数：误差函数、函数参数列表、数据点"
    ]
   },
   {
@@ -360,14 +356,14 @@
     }
    ],
    "source": [
-    "plt.plot(x_points, real_func(x_points), label='real')\n",
-    "plt.plot(x_points, fit_func(p_lsq_9[0], x_points), label='fitted curve')\n",
+    "plt.plot(x_points, real_func(x_points), label='real')#真实曲线\n",
+    "plt.plot(x_points, fit_func(p_lsq_9[0], x_points), label='fitted curve')#拟合曲线\n",
     "plt.plot(\n",
     "    x_points,\n",
     "    fit_func(p_lsq_regularization[0], x_points),\n",
-    "    label='regularization')\n",
-    "plt.plot(x, y, 'bo', label='noise')\n",
-    "plt.legend()"
+    "    label='regularization')#正则化后的拟合曲线\n",
+    "plt.plot(x, y, 'bo', label='noise')#bo蓝，ro红\n",
+    "plt.legend()#加图例"
    ]
   },
   {
